# AdventOfCode

./: .gitignore  CMakeLists.txt  Cargo.toml  add_day.sh  build.zig
2022/day01/: CMakeLists.txt  Cargo.toml  main.cpp
2022/day02/: CMakeLists.txt  Cargo.toml  main.cpp  main.rs
2022/day03/: CMakeLists.txt  Cargo.toml  main.cpp
2022/day04/: CMakeLists.txt  Cargo.toml  main.rs
2022/day05/: CMakeLists.txt  Cargo.toml
2022/day06/: CMakeLists.txt  Cargo.toml
2022/day07/: CMakeLists.txt  Cargo.toml
2022/day08/: CMakeLists.txt  Cargo.toml  main.rs
2022/day09/: CMakeLists.txt  Cargo.toml  main.rs
2022/day10/: CMakeLists.txt  Cargo.toml
2022/day11/: CMakeLists.txt  Cargo.toml  main.rs
2022/day12/: CMakeLists.txt  Cargo.toml  main.rs
2022/day13/: CMakeLists.txt  Cargo.toml
2022/day14/: CMakeLists.txt  Cargo.toml  main.rs
2022/day15/: CMakeLists.txt
2022/day16/: CMakeLists.txt
2022/day17/: CMakeLists.txt
2022/day18/: CMakeLists.txt
2022/day19/: CMakeLists.txt
2022/day20/: CMakeLists.txt
2022/day21/: CMakeLists.txt
2022/day22/: CMakeLists.txt
2022/day23/: CMakeLists.txt
2022/day24/: CMakeLists.txt
2022/day25/: CMakeLists.txt
2023/day01/: CMakeLists.txt  Cargo.toml  main.awk  main.c  main.cpp  main.lua  main.rs
2023/day02/: CMakeLists.txt  Cargo.toml  main.awk  main.c  main.cpp  main.lua  main.rs
2023/day03/: CMakeLists.txt  Cargo.toml  main.awk  main.c  main.cpp  main.lua  main.rs
2023/day04/: CMakeLists.txt  Cargo.toml  main.lua  main.rs
2023/day05/: Cargo.toml  main.rs
2024/: add_day.sh
2024/day01/: Cargo.toml  day01.lua  main.rs
2024/day02/: Cargo.toml  day02.lua  main.rs
2024/day03/: Cargo.toml  main.rs
2024/day04/: Cargo.toml  main.rs
2024/day05/: Cargo.toml  main.rs
2024/day06/: Cargo.toml  main.rs  perf.data  perf.data.old
2024/day07/: Cargo.toml  main.rs
2024/day08/: Cargo.toml  main.rs
2024/day09/: Cargo.toml  main.rs
2024/day10/: Cargo.toml  main.rs
aoclib/: CMakeLists.txt  aoclib.hpp  argparser.hpp  ifstream_iterator.hpp
aoclib/test/: CMakeLists.txt  argparser_test.cpp  ifstream_iterator_test.cpp  input
days/: CMakeLists.txt
(+74 files in other folders)
