[workspace]
members = [
  "days/day01",
  "days/day02",
  "days/day03",
  "days/day04",
  "days/day05",
  "days/day06",
  "days/day07",
  "days/day08",
  "days/day09",
  "days/day10",
  "days/day11",
  "days/day12",
  "aoclib",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Shivix/AdventOfCode2022"
publish = false
