[workspace]
members = [
  "2022/day01",
  "2022/day02",
  "2022/day03",
  "2022/day04",
  "2022/day05",
  "2022/day06",
  "2022/day07",
  "2022/day08",
  "2022/day09",
  "2022/day10",
  "2022/day11",
  "2022/day12",
  "2022/day13",
  "2022/day14",
  "2023/day01",
  "2023/day02",
  "aoclib",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Shivix/AdventOfCode"
publish = false
